[package]
authors = ["h12o+qrfi@blessedgeeks.com"]
categories = ["command-line-utilities"]
description = "A CLI Wi-Fi QR Code Generator"
edition = "2024"
keywords = ["cli", "qr-code", "utility", "wifi"]
license = "MIT"
name = "qrfi"
readme = "README.md"
repository = "https://github.com/h12o/qrfi"
version = "0.1.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
qrcode = "0.14"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
rand = "0.8"
